--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -72,6 +72,7 @@ h6 {
   background: var(--mainBrown);
 }
 
-.menu {
-    background: var(--mainGrey);
+.menu,
+.contact {
+  background: var(--mainGrey);
 }
