PWA functionality added.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,7 +4,7 @@
   --mainGrey: #ece8dc;
   --mainWhite: #fff;
   --mainDark: #222;
-  --mainGreen: rgb(140, 197, 61);
+  --mainGreen: #8cc53d;
   /* --mainDarkGreen: rgb(0, 69, 16); */
   --mainDarkGreen: rgb(31, 95, 52);
 }
